# deepharbor

./: .gitignore  README.md  docker-compose.yaml  nginx.conf  rebuild_gateway.sh  reset_for_restart.sh  start_dh.sh  stop_dh.sh
code/DHAdminPortal/: Dockerfile  README.md  app.py  app_config.py  dhservices.py  pyproject.toml  requirements.txt  run.sh
code/DHAdminPortal/static/: styles.css
code/DHAdminPortal/templates/: auth_error.html  base.html  graph.html  index.html
code/DHDispatcher/: .dockerignore  config.py  main.py  pyproject.toml
code/DHMemberPortal/: Dockerfile  README.md  app.py  app_config.py  dhservices.py  main.py  pyproject.toml  run.sh
code/DHMemberPortal/templates/: index.html  landing.html  member_dashboard.html  signup_email.html  signup_form.html
code/DHService/: auth.py  config.ini  db.py  main.py  pyproject.toml  start_services.sh  v1.py
code/DHService/client_test/: README.md  main.py  pyproject.toml
code/services/DHAccess/: .dockerignore  config.ini  main.py  pyproject.toml
code/services/DHAuthorizations/: config.ini  main.py  pyproject.toml
code/services/DHIdentity/: config.ini  main.py  pyproject.toml  start_services.sh
code/services/DHStatus/: Dockerfile  config.ini  main.py  pyproject.toml
code/workers/DH2AD/: .dockerignore  ad.py  b2c.py  config.ini  main.py  pyproject.toml  start_services.sh
code/workers/DHADController/: ad.py  main.py  pyproject.toml
pg/: README.md  pg_hba.conf  postgresql.conf
pg/db-init/: init.sql
pg/sql/: pgsql_schema.sql
tools/: backup_database.sh  generate_secret.sh
(+18 files in other folders)
