[project]
name = "dhadcontroller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.25.1",
    "configparser>=7.2.0",
    "logging>=0.4.9.6",
    "ms-active-directory>=1.14.1",
    "msal>=1.34.0",
    "msgraph-sdk>=1.53.0",
]
